--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12617,7 +12617,7 @@ Sharp:
       device: 'tablet'
       model: 'Sharp Aquos Pad'
 
-    - regex: '(LC-(?:[0-9]{2})[a-z0-9]+)[);/ ]'
+    - regex: '(LC-(?:[0-9]{2})[a-z0-9]+)(?:[);/ ]|$)'
       device: 'tv'
       model: '$1'
     - regex: 'SHARP-AQUOS|AQUOSBrowser'
