--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10330,20 +10330,6 @@ Orange:
     - regex: 'SPV[ \-]?([a-z0-9]+)'
       model: 'SPV $1'
 
-# Ouki
-Ouki:
-  regex: 'OUKI[ _-]|OK[AU][0-9]+[a-z]* Build'
-  device: 'smartphone'
-  models:
-    - regex: 'OUKI[ _-]?([^;/]+) Build'
-      model: '$1'
-    - regex: '([^;/)]+) Build/OUKI'
-      model: '$1'
-    - regex: 'OUKI[ _-]?([^;/)]+)(?:[;/)]|$)'
-      model: '$1'
-    - regex: '(OK[AU][0-9]+[a-z]*) Build'
-      model: '$1'
-
 # Oukitel
 Oukitel:
   regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|U20_Plus|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000)(?:[);/ ]|$)'
@@ -10360,6 +10346,20 @@ Oukitel:
     - regex: '(K4000)[_ ]Lite(?:[);/ ]|$)'
       model: '$1 Lite'
     - regex: '(Y4800|K10000|K[4567]000)(?:[);/ ]|$)'
+      model: '$1'
+
+# Ouki
+Ouki:
+  regex: 'OUKI|OK[AU][0-9]+[a-z]* Build'
+  device: 'smartphone'
+  models:
+    - regex: 'OUKI[ _-]?([^;/]+) Build'
+      model: '$1'
+    - regex: '([^;/)]+) Build/OUKI'
+      model: '$1'
+    - regex: 'OUKI[ _-]?([^;/)]+)(?:[;/)]|$)'
+      model: '$1'
+    - regex: '(OK[AU][0-9]+[a-z]*) Build'
       model: '$1'
 
 # Overmax
@@ -12587,7 +12587,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM12|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM1[12]|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -12659,7 +12659,7 @@ Sharp:
       model: 'Aquos S Mini'
     - regex: '(?:FS8010|SH-M08|SHV43(?:-u)?|SH-01[KL])(?:[);/ ]|$)'
       model: 'Aquos S2'
-    - regex: '(?:SHV46|SH-M11|901SH)(?:[);/ ]|$)'
+    - regex: '(?:SHV46|SH-R?M11|901SH)(?:[);/ ]|$)'
       model: 'Aquos S3 Plus'
     - regex: '(?:SHV44|808SH|SH-04L|SH-03G)(?:[);/ ]|$)'
       model: 'Aquos R3'
