--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -4442,3 +4442,23 @@
     model: Elegance 6 5.85"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; arm; 5007U) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.116 YaBrowser/20.7.5.84.00 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    short_name: YA
+    version: 20.7.5.84.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AL
+    model: 1V (2020)
+  os_family: Android
+  browser_family: Unknown
